--- a/demo/add-service-demo-dev.yml
+++ b/demo/add-service-demo-dev.yml
@@ -3,3 +3,9 @@ server:
   
 logging:
   file: springboot.log
+spring:
+  rabbitmq:
+    host: 192.168.1.21
+    port: 5672
+    username: guest
+    password: guest
