update demo config, modify mq setting

--- a/demo/add-service-demo-dev.yml
+++ b/demo/add-service-demo-dev.yml
@@ -5,10 +5,10 @@ logging:
   file: springboot.log
 spring:
   rabbitmq:
-    host: 192.168.1.21
-    port: 5671
-    username: guest
-    password: guest
+    host: 192.168.1.221
+    port: 5672
+    username: root
+    password: kshop
 my:
   info:
     str : 12332897655
