--- a/demo/zipkin-server-dev.yml
+++ b/demo/zipkin-server-dev.yml
@@ -11,7 +11,7 @@ spring:
     password: kshop
   datasource:
     schema: classpath:/mysql.sql
-    url: jdbc:mysql://192.168.1.223:3306/sleuth_log?serverTimezone=EDT
+    url: jdbc:mysql://192.168.1.223:3306/sleuth_log
     username: root
     password: 123456
     initialize: true
