--- a/demo/zipkin-server-dev.yml
+++ b/demo/zipkin-server-dev.yml
@@ -1,8 +1,10 @@
 server:
-    zipkin:
-      base-url: http://localhost:9841
+  port: 9841
+
 
 spring:
+  zipkin:
+    base-url: http://localhost:9841
   profiles:
     active: dev
   rabbitmq:
