--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -4,10 +4,26 @@ server:
 # datasoure默认使用JDBC
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    name: kd-auth
     username: root
     password: 123456
     url: jdbc:mysql://192.168.23.211:3306/kd-auth?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
   freemarker:
     allow-request-override: false
     allow-session-override: false
