--- a/kingdom/application-dev.yml
+++ b/kingdom/application-dev.yml
@@ -11,11 +11,11 @@ server:
 spring:
   redis:
     remote: false        #cachecloud 获取
-    host: 192.168.1.156
+    host: redis-host
     port: 6379
     password:
   rabbitmq:
-    host: 192.1681.156
+    host: rabbitmq-host
     port: 5672
     username: guest
     password: guest
