--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -18,7 +18,7 @@ spring:
     minIdle: 1
     timeBetweenEvictionRunsMillis: 28800
     minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
+#    validationQuery: select 'x'
     testWhileIdle: true
     testOnBorrow: false
     testOnReturn: false
