--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -7,7 +7,7 @@ spring:
     name: kd-auth
     username: root
     password: 123456
-    url: jdbc:mysql://192.168.1.211:3306/kd-auth?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    url: jdbc:mysql://mysql-host:3306/kd-auth?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -18,7 +18,7 @@ spring:
     minIdle: 1
     timeBetweenEvictionRunsMillis: 28800
     minEvictableIdleTimeMillis: 300000
-#    validationQuery: select 'x'
+    validationQuery: select 'x'
     testWhileIdle: true
     testOnBorrow: false
     testOnReturn: false
