--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -4,10 +4,10 @@ server:
 # datasoure默认使用JDBC
 spring:
   datasource:
-    name: kd-auth
+    name: kd-auth-server
     username: root
     password: 123456
-    url: jdbc:mysql://mysql-host:3306/kd-auth?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    url: jdbc:mysql://mysql-host:3306/kd_auth_v1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
