--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -1,13 +1,21 @@
-server:
-  port: 10000
-
-# datasoure默认使用JDBC
 spring:
+  application:
+    name: ace-auth
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+    default-property-inclusion: non_null
+  redis:
+    database: 2
+    host: ${REDIS_HOST:redis-host}
+    port: ${REDIS_PORT:6379}
+    pool:
+    max-active: 20
   datasource:
-    name: kd-auth-server
+    name: test
+    url: jdbc:mysql://${MYSQL_HOST:192.168.23.211}:${MYSQL_PORT:3306}/kd_auth_v1?useUnicode=true&characterEncoding=UTF8
     username: root
     password: 123456
-    url: jdbc:mysql://mysql-host:3306/kd_auth_v1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -16,7 +24,7 @@ spring:
     initialSize: 1
     maxWait: 60000
     minIdle: 1
-    timeBetweenEvictionRunsMillis: 28800
+    timeBetweenEvictionRunsMillis: 60000
     minEvictableIdleTimeMillis: 300000
     validationQuery: select 'x'
     testWhileIdle: true
@@ -24,30 +32,100 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
-  freemarker:
-    allow-request-override: false
-    allow-session-override: false
-    cache: true
-    charset: UTF-8
-    check-template-location: true
-    content-type: text/html
+  rabbitmq:
+    host: ${RABBIT_MQ_HOST:rabbitmq-host}
+    port:  ${RABBIT_MQ_PORT:5672}
+    username: guest
+    password: guest
+  sleuth:
     enabled: true
-    expose-request-attributes: false
-    expose-session-attributes: false
-    expose-spring-macro-helpers: true
-    prefer-file-system-access: true
-    suffix: .ftl
-    template-loader-path: classpath:/templates/
+    http:
+      legacy:
+        enabled: true
+  cloud:
+    consul:
+      enabled: true
+      host: consul-host
+      port: 8500
+      discovery:
+        healthCheckPath: /actuator/health
+        healthCheckInterval: 5s
+        instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+        register: true
+        enabled: true
 
-  ignore:
-    urls:
-      - /authentication/**
-      - /**/*.css
-      - /social
-      - /signin
-      - /signup
-      - /info
-      - /health
-      - /metrics/**
-      - /loggers/**
-      - /mobile/token
+mybatis:
+  basepackage: com.github.wxiaoqi.security.auth.mapper
+  xmlLocation: classpath:mapper/**/*.xml
+  mapper-locations: "classpath*:mapper/*.xml"
+
+server:
+  port: 9777 #启动端口
+
+feign:
+  httpclient:
+    enabled: false
+  okhttp:
+    enabled: true
+
+ribbon:
+  eureka:
+    enabled: true
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  MaxAutoRetries: 0
+  MaxAutoRetriesNextServer: 1
+  OkToRetryOnAllOperations: false
+
+hystrix:
+  threadpool:
+    default:
+      coreSize: 1000 ##并发执行的最大线程数，默认10
+      maxQueueSize: 1000 ##BlockingQueue的最大队列数
+      queueSizeRejectionThreshold: 500 ##即使maxQueueSize没有达到，达到queueSizeRejectionThreshold该值后，请求也会被拒绝
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000
+
+#eureka:
+#  instance:
+#    statusPageUrlPath: /actuator/info
+#    healthCheckUrlPath: /actuator/health
+#    # docker 部署开启
+#    prefer-ip-address: true
+#    ip-address: 127.0.0.1
+#  client:
+#    serviceUrl:
+#      #            defaultZone: http://localhost:8761/eureka/
+#      # docker 部署开启
+#      defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka/
+
+
+
+jwt:
+  token-header: Authorization
+  expire: 14400
+  rsa-secret: xx1WET12^%3^(WE45
+
+client:
+  id: ace-auth
+  secret: 123456
+  token-header: x-client-token
+  expire: 14400
+  rsa-secret: x2318^^(*WRYQWR(QW&T
+
+logging:
+  level:
+    #        tk.mybatis: DEBUG
+    com.github.wxiaoqi.security.auth: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  security:
+    enabled: false
