modify auth-server db

--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -111,7 +111,7 @@ jwt:
   rsa-secret: xx1WET12^%3^(WE45
 
 client:
-  id: ace-auth
+  id: kd-auth
   secret: 123456
   token-header: x-client-token
   expire: 14400
