--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -54,10 +54,33 @@ spring:
         register: true
         enabled: true
 
-mybatis:
-  basepackage: com.github.wxiaoqi.security.auth.mapper
-  xmlLocation: classpath:mapper/**/*.xml
-  mapper-locations: "classpath*:mapper/*.xml"
+mybatis-plus:
+  mapper-locations: classpath:/mapper/auth/*Mapper.xml
+  global-config:
+    #刷新mapper 调试神器
+    db-config:
+      #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+      id-type: UUID
+      #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+      field-strategy: not_empty
+      #驼峰下划线转换
+      column-underline: true
+      #数据库大写下划线转换
+      #capital-mode: true
+      #逻辑删除配置
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      db-type: mysql
+      #表名前缀
+      table-prefix: kd_
+    refresh: true
+    #自定义填充策略接口实现
+    #meta-object-handler: com.baomidou.springboot.xxx
+    #自定义SQL注入器
+    #sql-injector: com.baomidou.springboot.xxx
+    configuration:
+      map-underscore-to-camel-case: true
+      cache-enabled: false
 
 server:
   port: 9777 #启动端口
