--- a/kingdom/kd-auth-server-dev.yml
+++ b/kingdom/kd-auth-server-dev.yml
@@ -12,10 +12,10 @@ spring:
     pool:
     max-active: 20
   datasource:
-    name: test
-    url: jdbc:mysql://${MYSQL_HOST:192.168.23.211}:${MYSQL_PORT:3306}/kd_auth_v1?useUnicode=true&characterEncoding=UTF8
+    name: kd-auth
     username: root
     password: 123456
+    url: jdbc:mysql://mysql-host:3306/kd_auth_v1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -24,7 +24,7 @@ spring:
     initialSize: 1
     maxWait: 60000
     minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
+    timeBetweenEvictionRunsMillis: 28800
     minEvictableIdleTimeMillis: 300000
     validationQuery: select 'x'
     testWhileIdle: true
@@ -143,7 +143,7 @@ client:
 logging:
   level:
     #        tk.mybatis: DEBUG
-    com.github.wxiaoqi.security.auth: DEBUG
+    cn.otccloud.kingdom: DEBUG
 
 management:
   endpoints:
