update gateway route

--- a/kingdom/kd-gateway-dev.yml
+++ b/kingdom/kd-gateway-dev.yml
@@ -6,7 +6,7 @@ spring:
       routes:
       # 认证中心
       - id: kd-auth
-        uri: lb://kd-auth
+        uri: http://127.0.0.1:19000/
         predicates:
           - Path=/auth/**
         filters:
